Date	Added

2006/10/18
	* Added monster_noteleport mapflag to the guild castle maps to prevent
	  "avoiding MVPs" by forcing them to teleport from rude-attacks. [Skotlex]
2006/10/16
	* Added &16 to the default of the emergency_call setting (skill.conf)
	  [Skotlex]
2006/10/12
	* Added Homunculus atcommands [Playtester]
2006/10/11
	* Removed useless inter_athena settings (they were doing absolutely
	  nothing): read_gm_interval, gm_db, gm_db_level, gm_db_account_id,
	  use_new_sql_db [Skotlex]
2006/10/06
	* status_cast_cancel is now a type 4 (object bitmasks) setting
	  (status.conf). [Skotlex]
2006/10/06
	* Removed gm_all_skill_add_abra which was doing nothing anyway. [Skotlex]
2006/10/03
	* Renamed setting delay_dependon_dex to delay_dependon_agi, the delay of
	  skills is reduced now (when enabled) by AGI instead of DEX, which makes a
	  lot more sense than DEX. [Skotlex]
2006/09/25
	* Removed config setting allow_atcommand_when_mute as it's no longer used
	  (see manner_system in misc.conf for it's replacement) [Skotlex]
2006/09/19
	* Removed setting ban_spoof_namer (as now invalid chat packets just cause
	  the sending character to be disconnected). [Skotlex]
2006/09/18
	* The new socket update code includes support for two new config settings
	  (packet_athena.txt): frame_size, which can be used to alter the logic
	  packet-size allowed by the code, and mode_neg, which when set to yes, sets
	  TCP_NODELAY on all connections (defaults to yes). [Skotlex]
	* Due to a recent update of how cards/equipment status change defense
	  works, the max sc resistance settings (battle/status.conf) no longer apply
	  to them. [Skotlex]
2006/09/16
	* Added monster_ai&256. When set, a monster will pick a random starting
	  position to begin checking versus it's skills, otherwise, it will always
	  begin checking from the beginning. [Skotlex]
2006/09/15
	* Added atcommand.conf entries for @adjgmlvl and @adjcmdlvl [Skotlex]
2006/09/14